--- a/src/gui/MainView.fxml
+++ b/src/gui/MainView.fxml
@@ -12,7 +12,7 @@
          <children>
             <MenuBar>
               <menus>
-                <Menu mnemonicParsing="false" text="Cadastro">
+                <Menu mnemonicParsing="false" text="Registros">
                   <items>
                     <MenuItem fx:id="menuItemVendedor" mnemonicParsing="false" onAction="#onMenuItemVendendorAction" text="Vendedor" />
                         <MenuItem fx:id="menuItemDepartamento" mnemonicParsing="false" onAction="#onMenuItemDepartamentoAction" text="Departamento" />
